# raylib-slo-jam-23

./: .gitignore  CMakeLists.txt  README.md  build_and_run_for_web.py  shell.html  wrap.bat
assets/wip/: shapes.hxl  ship-pixel-viper.aseprite
game/: CMakeLists.txt  game.c  game.h  main.c
game/collisions/: collisions.c  collisions.h
game/entities/: basic_bullet.h  entity.c  entity.h  player.c  player.h
game/rendering/: renderer.h  textures.c  textures.h
game/scenes/: game_state.h  scene.c  scene.h
game/textures/: textures.c  textures.h
game/utils/: collisions.c  collisions.h  cute_c2.h  types.h  utils.h
